<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!-- HOME -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.basculasmagris.richiger.view.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!-- PRODUCTS -->
    <fragment
        android:id="@+id/nav_product"
        android:name="com.basculasmagris.richiger.view.fragments.ProductListFragment"
        android:label="@string/screen_product_list"
        tools:layout="@layout/fragment_product_list" >
        <action
            android:id="@+id/action_productFragment_to_productDetailFragment"
            app:destination="@id/nav_product_detail" />
        <action
            android:id="@+id/action_nav_product_to_addUpdateProductActivity"
            app:destination="@id/addUpdateProductActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_product_detail"
        android:name="com.basculasmagris.richiger.view.fragments.ProductDetailFragment"
        android:label="@string/screen_product_detail"
        tools:layout="@layout/fragment_product_detail" >
        <argument
            android:name="productDetail"
            app:argType="com.basculasmagris.richiger.model.entities.Product"
            />
    </fragment>

    <activity
        android:id="@+id/addUpdateProductActivity"
        android:name="com.basculasmagris.richiger.view.activities.AddUpdateProductActivity"
        android:label="@string/screen_product_new"
        tools:layout="@layout/activity_add_update_product" />


    <!-- CARRO -->
    <fragment
        android:id="@+id/nav_carro"
        android:name="com.basculasmagris.richiger.view.fragments.CarroListFragment"
        android:label="@string/screen_carro_list"
        tools:layout="@layout/fragment_carro_list" >
        <action
            android:id="@+id/action_carroFragment_to_carroDetailFragment"
            app:destination="@id/nav_carro_detail" />
        <action
            android:id="@+id/action_nav_carro_to_addUpdateCarroActivity"
            app:destination="@id/addUpdateCarroActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_carro_detail"
        android:name="com.basculasmagris.richiger.view.fragments.CarroDetailFragment"
        android:label="@string/screen_carro_detail"
        tools:layout="@layout/fragment_carro_detail" >
        <argument
            android:name="carroDetail"
            app:argType="com.basculasmagris.richiger.model.entities.Carro"
            />
    </fragment>

    <activity
        android:id="@+id/addUpdateCarroActivity"
        android:name="com.basculasmagris.richiger.view.activities.AddUpdateCarroActivity"
        android:label="@string/screen_carro_new"
        tools:layout="@layout/activity_add_update_carro" />


    <!-- ESTABLISHMENTS -->
    <activity
        android:id="@+id/addUpdateEstablishmentActivity"
        android:name="com.basculasmagris.richiger.view.activities.AddUpdateEstablishmentActivity"
        android:label="@string/screen_establishment_new"
        tools:layout="@layout/activity_add_update_establishment" />

    <fragment
        android:id="@+id/nav_establishment"
        android:name="com.basculasmagris.richiger.view.fragments.EstablishmentListFragment"
        android:label="@string/screen_establishment_list"
        tools:layout="@layout/fragment_establishment_list" >
        <action
            android:id="@+id/action_establishmentListFragment_to_addUpdateEstablishmentActivity"
            app:destination="@id/addUpdateEstablishmentActivity" />
        <action
            android:id="@+id/action_establishmentListFragment_to_establishmentDetailFragment"
            app:destination="@id/establishmentDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/establishmentDetailFragment"
        android:name="com.basculasmagris.richiger.view.fragments.EstablishmentDetailFragment"
        android:label="@string/screen_establishment_detail"
        tools:layout="@layout/fragment_establishment_detail">
        <argument
            android:name="establishmentDetail"
            app:argType="com.basculasmagris.richiger.model.entities.Establishment"
            />
    </fragment>

    <!-- CORRAL -->
    <fragment
        android:id="@+id/nav_corral"
        android:name="com.basculasmagris.richiger.view.fragments.CorralListFragment"
        android:label="@string/screen_corral_list"
        tools:layout="@layout/fragment_corral_list" >
        <action
            android:id="@+id/action_corralListFragment_to_corralDetailFragment"
            app:destination="@id/corralDetailFragment" />
        <action
            android:id="@+id/action_corralListFragment_to_addUpdateCorralActivity"
            app:destination="@id/addUpdateCorralActivity" />
    </fragment>

    <fragment
        android:id="@+id/corralDetailFragment"
        android:name="com.basculasmagris.richiger.view.fragments.CorralDetailFragment"
        android:label="@string/screen_corral_detail"
        tools:layout="@layout/fragment_corral_detail">
        <argument
            android:name="corralDetail"
            app:argType="com.basculasmagris.richiger.model.entities.Corral"
            />
    </fragment>

    <activity
        android:id="@+id/addUpdateCorralActivity"
        android:name="com.basculasmagris.richiger.view.activities.AddUpdateCorralActivity"
        android:label="@string/screen_corral_new"
        tools:layout="@layout/activity_add_update_corral" />
    <fragment
        android:id="@+id/nav_mixer"
        android:name="com.basculasmagris.richiger.view.fragments.MixerListFragment"
        android:label="@string/screen_mixer_list"
        tools:layout="@layout/fragment_mixer_list" >
        <action
            android:id="@+id/action_mixerListFragment_to_mixerDetailFragment"
            app:destination="@id/mixerDetailFragment" />
        <action
            android:id="@+id/action_mixerListFragment_to_addUpdateMixerActivity"
            app:destination="@id/addUpdateMixerActivity" />
    </fragment>
    <fragment
        android:id="@+id/mixerDetailFragment"
        android:name="com.basculasmagris.richiger.view.fragments.MixerDetailFragment"
        android:label="@string/screen_mixer_detail"
        tools:layout="@layout/fragment_mixer_detail"
        >
        <argument
            android:name="mixerDetail"
            app:argType="com.basculasmagris.richiger.model.entities.Mixer"
            />
    </fragment>
    <activity
        android:id="@+id/addUpdateMixerActivity"
        android:name="com.basculasmagris.richiger.view.activities.AddUpdateMixerActivity"
        android:label="@string/screen_mixer_new"
        tools:layout="@layout/activity_add_update_mixer" />
    <fragment
        android:id="@+id/nav_diet"
        android:name="com.basculasmagris.richiger.view.fragments.DietListFragment"
        android:label="@string/diet_title"
        tools:layout="@layout/fragment_diet_list" >
        <action
            android:id="@+id/action_dietListFragment_to_dietDetailFragment"
            app:destination="@id/dietDetailFragment" />
        <action
            android:id="@+id/action_dietListFragment_to_addUpdateDietActivity"
            app:destination="@id/addUpdateDietActivity" />
    </fragment>
    <fragment
        android:id="@+id/dietDetailFragment"
        android:name="com.basculasmagris.richiger.view.fragments.DietDetailFragment"
        android:label="@string/diet_detail_title"
        tools:layout="@layout/fragment_diet_detail" >
        <argument
            android:name="dietDetail"
            app:argType="com.basculasmagris.richiger.model.entities.Diet"
            />
    </fragment>
    <activity
        android:id="@+id/addUpdateDietActivity"
        android:name="com.basculasmagris.richiger.view.activities.AddUpdateDietActivity"
        android:label="activity_add_update_diet"
        tools:layout="@layout/activity_add_update_diet" />
    <activity
        android:id="@+id/addUpdateRoundActivity"
        android:name="com.basculasmagris.richiger.view.activities.AddUpdateRoundActivity"
        android:label="activity_add_update_round"
        tools:layout="@layout/activity_add_update_round" />
    <fragment
        android:id="@+id/roundDetailFragment"
        android:name="com.basculasmagris.richiger.view.fragments.RoundDetailFragment"
        android:label="@string/round_detail_title"
        tools:layout="@layout/fragment_round_detail"

        >
        <argument
            android:name="roundDetail"
            app:argType="com.basculasmagris.richiger.model.entities.Round"
            />
    </fragment>
    <fragment
        android:id="@+id/nav_round"
        android:name="com.basculasmagris.richiger.view.fragments.RoundListFragment"
        android:label="@string/round_list" >
        <action
            android:id="@+id/action_roundListFragment_to_roundDetailFragment"
            app:destination="@id/roundDetailFragment" />
        <action
            android:id="@+id/action_roundListFragment_to_addUpdateRoundActivity"
            app:destination="@id/addUpdateRoundActivity" />
    </fragment>
    <fragment
        android:id="@+id/nav_sync"
        android:name="com.basculasmagris.richiger.view.fragments.SyncFragment"
        android:label="@string/sync_title"
        tools:layout="@layout/fragment_sync" />

</navigation>