<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SyncFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/sync_intro"
            />

        <Button
            android:id="@+id/btn_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_btn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/sync_products_title"
                />

            <ProgressBar
                android:id="@+id/pb_products"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:max="100"
                android:progressBackgroundTint="@color/gray_light"
                android:progressTint="@color/blue_900"
                android:layout_height="wrap_content"
                android:progress="0"
                />

            <TextView
                android:id="@+id/tv_products_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="0%"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/sync_mixer_title"
                />

            <ProgressBar
                android:id="@+id/pb_mixers"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:max="100"
                android:progressBackgroundTint="@color/gray_light"
                android:progressTint="@color/blue_900"
                android:layout_height="wrap_content"
                android:progress="0"
                />

            <TextView
                android:id="@+id/tv_mixers_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="0%"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/sync_establishment_title"
                />

            <ProgressBar
                android:id="@+id/pb_establishments"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:max="100"
                android:progressBackgroundTint="@color/gray_light"
                android:progressTint="@color/blue_900"
                android:layout_height="wrap_content"
                android:progress="0"
                />

            <TextView
                android:id="@+id/tv_establishments_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="0%"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/sync_corral_title"
                />

            <ProgressBar
                android:id="@+id/pb_corrals"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:max="100"
                android:progressBackgroundTint="@color/gray_light"
                android:progressTint="@color/blue_900"
                android:layout_height="wrap_content"
                android:progress="0"
                />

            <TextView
                android:id="@+id/tv_corrals_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="0%"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/sync_diet_title"
                />

            <ProgressBar
                android:id="@+id/pb_diets"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:max="100"
                android:progressBackgroundTint="@color/gray_light"
                android:progressTint="@color/blue_900"
                android:layout_height="wrap_content"
                android:progress="0"
                />

            <TextView
                android:id="@+id/tv_diets_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="0%"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/sync_round_title"
                />

            <ProgressBar
                android:id="@+id/pb_rounds"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:max="100"
                android:progressBackgroundTint="@color/gray_light"
                android:progressTint="@color/blue_900"
                android:layout_height="wrap_content"
                android:progress="0"
                />

            <TextView
                android:id="@+id/tv_rounds_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="0%"
                />

        </LinearLayout>


    </LinearLayout>



</FrameLayout>